tests/error/comptime/check_inplace_construct1.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		__builtin_inplace_construct(foo(), 0);
	});
}
